# NeRF

./: CMakeLists.txt  README.md  backend-cuda.cu  benchmark.cpp  benchmark.cu  nerf.h
.github/workflows/: arch-build.yml  windows-build.yml
